--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
+
+:root {
+  --primary: rgba(0, 0, 0, 1);
+  --secondary: rgba(255, 255, 255, 1);
+
+  --mainFont: 'Ubuntu', sans-serif;
+
+
+  --spacing-xs: 1em;
+  --spacing-sm: 2em;
+  --spacing-md: 3em;
+  --spacing-l: 4em;
+  --spacing-xl: 5em;
+  --spacing-xxl: 10em;
+}
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
