Add gspa to main screen

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
   --mainFont: 'Ubuntu', sans-serif;
 
-
+  --spacing-xxs: 0.5em;
   --spacing-xs: 1em;
   --spacing-sm: 2em;
   --spacing-md: 3em;
