--- a/src/Components/MainBcg/mainBcg.css
+++ b/src/Components/MainBcg/mainBcg.css
@@ -4,3 +4,13 @@
   height: 100vh;
   background-size: cover;
 }
+
+.mainContainer {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
