--- a/src/Components/Subtitle/subtitle.css
+++ b/src/Components/Subtitle/subtitle.css
@@ -1,8 +1,6 @@
 .subtitle {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin-top: 0;
+  width: 100%;
   font-size: 64px;
   font-family: var(--mainFont);
   text-align: center;
