--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -1,8 +1,5 @@
 .title {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
   font-size: 104px;
   font-family: var(--mainFont);
   text-align: center;
