--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
 
 :root {
@@ -16,6 +17,14 @@
   --spacing-l: 4em;
   --spacing-xl: 5em;
   --spacing-xxl: 10em;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--primary);
 }
 
 
