--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -6,7 +6,7 @@
   color: var(--primary);
   background: var(--maingradient);
   cursor: pointer;
-  width: 15%;
+  width: 20%;
   border-radius: 8px;
   transition: 0.3s;
   border: 1px solid var(--primary);
@@ -39,8 +39,9 @@
 }
 
 .demoBtn {
-  width: 70%;
-  margin: var(--spacing-xs);
+  width: 100%;
+  margin: 0;
+  /* margin: var(--spacing-xs); */
 }
 
 .startBtn:hover,
@@ -49,4 +50,13 @@
 .demoBtn:hover {
   transform: scale(1.1);
   box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 1);
+}
+
+.navlink {
+  display: block;
+  transform: scale(1);
+  width: 70%;
+  border-radius: 8px;
+  transition: 0.3s;
+  margin: var(--spacing-xs);
 }
