--- a/src/Components/LanguageSwitch/languageSwitch.css
+++ b/src/Components/LanguageSwitch/languageSwitch.css
@@ -5,8 +5,8 @@
   justify-content: space-evenly;
   align-items: center;
   color: var(--secondary);
-  margin-top: var(--spacing-xs);
-  margin-bottom: var(--spacing-xs);
+  margin-top: var(--spacing-sm);
+  margin-bottom: var(--spacing-sm);
   cursor: pointer;
 }
 
